--- a/task5/task5-003.css
+++ b/task5/task5-003.css
@@ -1,7 +1,9 @@
  
+
+ 
  /*将px换算成rem 720px=72rem 
    使用一倍图大小 72rem/2=36rem*/
- html {font-size: 62.5%;  }   
+ /*html {font-size: 62.5%;  }    */
 
 .task5-header{
     position: fixed;
@@ -95,6 +97,8 @@
 }
 
 .task5-banner-bg img {
+    /*use width:100%; dai ti qie xiao tu */
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -103,7 +107,7 @@
     top:4rem;
     left: 1.5rem;
     background: url("img/task5-banner-photo003.png") no-repeat;
-    width: 8.5rem;
+    width: 8.5rem; 
     height: 8.5rem;
 }
 
