完成任务7的首页页面

--- a/task6/task6-001.css
+++ b/task6/task6-001.css
@@ -69,7 +69,7 @@ body{
     position: fixed;
     bottom: 0;
     height: 1rem;
-    background: #f8fafb; 
+    background: rgba(248, 250, 251, 0.3);/*实现半透明 透明度0.3*/
  /*   background-color: sandybrown; */
     display: flex;
     width: 100%;
