--- a/task4/URL/task4-URL001.css
+++ b/task4/URL/task4-URL001.css
@@ -14,19 +14,23 @@
 body{
     background-color: rgb(239,240,244);
     color: white;
+    padding: 0;
+    margin: 0;
 }
 #header{
     background-color: rgb(104,205,213);
     text-align: center;
-    margin: 0.2em;
+    /* margin: 0.2em; */
     position: fixed;
     left: 0em;
     top:0em;
-    padding-right: 40%;
-    padding-left: 40%;
-    width: 18%;
-    line-height: 2em; /*使用行高height*/
+    /* padding-right: 40%; */
+    /* padding-left: 40%; */
+    width: 100%;
+    height: 3em;
+    line-height: 3em; /*使用行高height*/
 }
+#header+*{margin-top: 3.6rem;}
 #header>.register{
     position: absolute;
     left:0.6em;
@@ -37,38 +41,69 @@ body{
     right: 0.6em;
     top: 0em;
 }
-.account{
+
+.task4-account{
+    width: 100%;
+    /* background-color: orange; */
+    background-color: #ffffff;
+    height: 3rem;
+    margin-bottom: 0.6rem;
+}
+
+.task4-account .account{
     background-image: url("http://118.126.113.248/jnshu790/CSS-Task/task4/login_03.png");
+    background-size: 18px 26px; /*将图片变小*/
     background-repeat: no-repeat;
     background-color: white;
     background-position: 2rem;
-    margin-top: 3.2em;
     padding-right: 20%;
     padding-left: 20%;
-    width: 58%;
     border:0em ;
+    height: 2.8rem;
     line-height: 3em; /*使用行高height*/
+    outline: none;  /*去掉外边框*/
 }
-.password{
+
+.task4-account .password {
+    background-image: url("http://118.126.113.248/jnshu790/CSS-Task/task4/login_06.png");
+    background-size: 18px 26px; /*将图片变小*/
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: 2rem;
+    padding-right: 20%;
+    padding-left: 20%;
+    border:0em ;
+    height: 2.8rem;
+    line-height: 3em; /*使用行高height*/
+    outline: none;  /*去掉外边框*/
+}
+
+/* .password{
     background-color: white;
     background-image: url(http://118.126.113.248/jnshu790/CSS-Task/task4/login_06.png);
+    background-size: 18px 26px;
     background-repeat: no-repeat;
     background-position: 2rem;
+    /* margin: 0; 
     margin-top: 0.6em;
     padding-right: 20%;
     padding-left: 20%;
     width: 58%;
     border:0em ;
-    line-height: 3em; /*使用行高height*/
-}
+    line-height: 3em; /*使用行高height
+    outline: none;
+} */
+
 .login{
     background-color: rgb(104,205,213);
     color: white;
     text-align: center;
-    margin-top: 0.6em;
-    width: 98%;
+    /* margin-top: 0.6em; */
+    width: 100%;
     border:0em;
-    line-height: 3em; /*使用行高height*/
+    height: 3rem;
+    line-height: 3rem; /*使用行高height*/
+    font-size: 1rem;
 }
 .forget{
     margin-top: 0.6em;
