--- a/task7/css/task7-home.css
+++ b/task7/css/task7-home.css
@@ -35,8 +35,9 @@ body{
     color: #ffffff;
     background: #29bde0;
     border: 0;
-    margin-top: 0.4rem;
-    font-size: 0.2rem;
+    margin-top: 0.3rem;
+    font-size: 0.32rem;
+    margin-left: 0.2rem;
 }
 
 #home-page-body{
@@ -107,14 +108,15 @@ body{
     color: #787878;
     margin: 0.2rem auto;
 }
-#home-page-body .page-two .btn{
+/* #home-page-body .page-two .btn{ */
+#home-page-body .page-two a { 
     position: absolute;
     top: 50%;
-    right: -0.2rem;
+    right: -0.06rem;
     margin-top: -0.38rem;
     height: 1.36rem;
     /* width: 0.4rem; */
-    font-size: 0.32rem;
+    font-size: 0.62rem;
     color: #fbb435;
     border: 0;
 }
