--- a/task6/URL/task6-URL.css
+++ b/task6/URL/task6-URL.css
@@ -14,6 +14,7 @@ body{
 .task6-box {
     max-width: 7.2rem;
     margin: 0 auto; 
+    margin-bottom: 1rem;
 }
 .container {
     padding: 0 0.3rem;
