--- a/task8/css/task8-public.css
+++ b/task8/css/task8-public.css
@@ -126,6 +126,51 @@ img {
 .navbar-default .navbar-nav li.active001 a{
     border-bottom: 4px solid #ffffff;
 }
+/* 任务8底部 */
+.task8-public-footer {
+    background: #29b078;
+    width: 100%;
+    /* height: 180px; */
+    margin-top: 10px;
+}
+.task8-public-footer .footer-left p {
+    margin-top: 20px;
+    color: #fff;
+}
+.task8-public-footer .footer-left ul li {
+    display: inline-block;
+    margin-top: 30px;
+    border-right: 2px solid #fff;
+    padding-right: 12px;
+    margin-right: 12px;
+}
+.task8-public-footer .footer-center p {
+    margin-top: 20px;
+    color: #fff;
+}
+.task8-public-footer .footer-center ul li {
+    display: inline-block;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+.task8-public-footer .footer-right p {
+    margin-top: 20px;
+    color: #fff;
+}
+.task8-public-footer .footer-right .weixin {
+    background: url("../img/task8-footer-weixin.png") no-repeat;
+    background-size: 100% auto;
+    width: 92px;
+    height: 92px;
+    margin-top: 6px;
+}
+.task8-public-footer .rights {
+    text-align: center;
+    color: #fff;
+    margin-top: 10px;
+}
+
+
 
 
 @media (max-width:768px){
