给任务8 添加自定义轮播图js 和 下拉框js

--- a/task7/css/task7-vote.css
+++ b/task7/css/task7-vote.css
@@ -88,6 +88,7 @@ body{
 /*投票部分*/
 .task7-box .vote-numbers {
     width: 6.4rem;
+    margin-bottom: 1.6rem;
 }
 .task7-box .vote-numbers p {
     font-size: 0.22rem;
