--- a/task7/css/task7-result.css
+++ b/task7/css/task7-result.css
@@ -138,6 +138,7 @@ body {
 .task7-box .result-days{
     /* background: darkgray; */
     padding: 0 0.8rem;
+    margin-bottom: 1.6rem;
 }
 .task7-box .result-days .day-one{
     border-bottom: 1px solid #cdcdcd;
