--- a/task8/css/task8-home.css
+++ b/task8/css/task8-home.css
@@ -1,50 +1,93 @@
-/* .task8-banner{
+.task8-banner {
     width: 100%;
-    height: 600px;
+    /* height: 600px; */
+    height: 375px;
 }
-.task8-banner img{
+
+.task8-banner img {
     width: 100%;
-} */
+}
 
 /* banner部分、轮播图 */
-/* .task8-banner {
+.task8-banner {
     overflow: hidden;  
     position: relative;
-    /* background: salmon;  
-    height: auto;
-    /* max-height: 600px;  
+    /* background: salmon;  */
+    /* height: auto; */
+    /* max-height: 600px;  */
+    height: 375px;
     width: 100%;
     min-width: 1200px;
-}  */
+}
+
+.ui-slider-LunBT{
+    position: relative;
+    height: 375px;
+}
 
 /* 这是之前自定义轮播图部分 */
-/* .task8-banner .inner {
+.task8-banner .inner {
     position: relative;
     width: 9999px;
-    /* width: 100%;  
+    /* width: 100%;  */
     left: 0;
+    /* left: -1200px; */
     top: 0;
+    transition: all .5s; /* 图片缓慢移动*/
 }
 
 .task8-banner .inner .innerwraper {
     float: left;
     /* width: 100%; */
-    /* width: 1920px; 
+    /* width: 1920px; */
 }
 
 .task8-banner .inner .innerwraper img {
     height: auto;
     width: 100%;
+    /* height: 100%;
+    width: auto; */
     max-width: 1200px;
-    /* margin: 0 150px; 
+    /* margin: 0 150px; */
     margin: 0;
 }
+
+/* 
+.ui-slider-arrow {
+    /* width: 544px; 
+    width: 1200px;
+    height: 40px;
+    position: absolute;
+    /* margin: 0 auto; 
+    margin-top: -20px;
+    top: 50%;
+    /* background-color: orange; 
+}
+
+.ui-slider-arrow .item {
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    background: url(../img/ui-slider-arrow.png) no-repeat;
+}
+
+.ui-slider-arrow .left {
+    left: 0;
+}
+
+.ui-slider-arrow .right {
+    right: 0;
+    /* x -40px 
+    background-position: -40px 0;
+} */
 
 .task8-banner .pagination {
     position: absolute;
     left: 0px;
     top: 300px;
-    /* bottom: 10px; 
+    /* bottom: 10px; */
     width: 100%;
     text-align: center;
 }
@@ -60,12 +103,17 @@
 
 .task8-banner .pagination .active {
     background-color: #fff;
-} */
-.task8-home{
+}
+
+
+
+
+.task8-home {
     background-color: #fafafa;
     width: 100%;
     /* max-width: 1920px; */
 }
+
 /* introduce部分 */
 .task8-introduce .introduce-one {
     margin-top: 60px;
@@ -184,12 +232,15 @@
     /* margin-bottom: 200px; */
     margin-top: 40px;
 }
-.task8-students h4{
+
+.task8-students h4 {
     text-align: center;
 }
+
 .task8-students .students-one {
     margin-top: 50px;
 }
+
 .task8-students .students-one .box {
     background-color: #fff;
     width: 260px;
@@ -198,28 +249,33 @@
     border: 1px solid #898989;
     border-radius: 4px;
 }
-.task8-students .students-one .box .students-photo{
+
+.task8-students .students-one .box .students-photo {
     background: url("../img/task8-stu003.png") no-repeat;
     background-size: 100% auto;
     width: 108px;
     height: 108px;
     margin: 0 auto;
 }
+
 .task8-students .students-one .box .students-name {
     font-size: 16px;
     margin-top: 20px;
     text-align: center;
 }
+
 .task8-students .students-one .box .students-state {
     margin-top: 30px;
     color: #898989;
     padding: 0 30px;
 }
+
 .task8-students .students-pagination {
     margin-top: 400px;
     text-align: center;
 }
-.task8-students .students-pagination span{
+
+.task8-students .students-pagination span {
     display: inline-block;
     background-color: #fff;
     width: 16px;
@@ -228,7 +284,8 @@
     border-radius: 50%;
     cursor: pointer;
 }
-.task8-students .students-pagination span.active{
+
+.task8-students .students-pagination span.active {
     background-color: #29b078;
 }
 
@@ -238,9 +295,11 @@
     /* margin-bottom: 200px; */
     margin-top: 50px;
 }
+
 .task8-company h4 {
     text-align: center;
 }
+
 .task8-company .company-one {
     background-color: #fff;
     width: 200px;
@@ -250,7 +309,8 @@
     margin-top: 30px;
     margin-left: 30px;
 }
-.task8-company .company-one a{
+
+.task8-company .company-one a {
     background: url("../img/task8-company001.png") no-repeat;
     background-size: 100% auto;
     width: 180px;
@@ -263,19 +323,23 @@
     margin-top: 50px;
     /* margin-bottom: 200px; */
 }
+
 .task8-friend-link h4 {
     margin-top: 10px;
     text-align: center;
 }
+
 .task8-friend-link .link-one {
     margin-top: 10px;
     /* border: 2px solid sandybrown; */
 }
-.task8-friend-link .link-one ul li{
+
+.task8-friend-link .link-one ul li {
     list-style-type: disc;
     margin: 10px 50px;
 }
-.task8-friend-link .link-one ul li a{
+
+.task8-friend-link .link-one ul li a {
     color: #898989;
 }
 
@@ -406,5 +470,14 @@
         height: 22px;
         margin-top: -56px;
         margin-right: 22px;
+    }
+    
+    /* banner部分、轮播图 */
+    .task8-banner {
+        height: 160px;
+    }
+    
+    .ui-slider-LunBT{
+        height: 160px;
     }
 }
