--- a/task8/css/task8-job.css
+++ b/task8/css/task8-job.css
@@ -21,16 +21,22 @@
     padding: 20px 0;
     border-bottom: 1px solid #ababab;
 }
-.task8-job .direction ul li {
+/* .task8-job .direction ul li {
     display: inline-block;
     margin-right: 20px;
 }
 .task8-job .direction ul li a {
     color: #000000;
-}
-.task8-job .direction ul li.active a {
+    display: inline-block;
+} */
+/* .task8-job .direction ul li.active a {
+    color: #29b078;
+} */
+
+.task8-job .direction .active {
     color: #29b078;
 }
+
 .task8-job .front-end .front-end-title {
     padding: 20px 0;
     border-bottom: 1px solid #cdcdcd;
@@ -94,4 +100,22 @@
 }
 .task8-job .front-end-table .front-job-one table tr.tip th p {
     color: #ababab;
+}
+
+.ui-back-end {
+    display: none;
+}
+
+.task8-job .direction .item{
+    display: inline-block;
+    color: #000000;
+    margin-right: 20px;
+}
+
+.task8-job .direction .active {
+    color: #29b078;
+}
+
+.ui-back-end .front-end-title p{
+    color: #29b078;
 }
