--- a/task8/css/task8-public.css
+++ b/task8/css/task8-public.css
@@ -44,6 +44,7 @@ img {
     /* background: orange; */
     width: 100%;
     height: 40px;
+    position: relative;
 }
 .public-container {
     width: 1200px;
