--- a/task8/css/task8-ui.css
+++ b/task8/css/task8-ui.css
@@ -57,6 +57,105 @@
     /* cursor: pointer; */
 }
 
+/* 登录弹出层 */
+.task8-public-top .ui-tanchuceng {
+    float: right;
+    margin: 0 20px;
+    height: 40px;
+    line-height: 40px;
+}
+.task8-public-top .ui-tanchuceng a{
+    color: #29b078;
+}
+
+/* 弹出层遮罩 */
+.ui-zhezhao-tanchuceng {
+    display: none;
+    z-index: 99;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background: #000;
+    opacity: 0.6;
+}
+
+/* 弹出层窗体 */
+.ui-chuangti-tanchuceng {
+    display: none;
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+
+    width: 400px;
+    height: 300px;
+    background: #fff;
+}
+/* 关闭按钮 */
+.ui-tanchuceng-guanbi{
+
+    float: right;
+    width: 24px;
+    height: 24px;
+    border: 3px solid #fff;
+    text-align: center;
+    border-radius: 50%;
+    background: #eee;
+
+    margin-right: -12px;
+    margin-top: -12px;
+}
+.ui-tanchuceng-guanbi:hover{
+    cursor: pointer;
+    background: #ccc;
+    color: #fff;
+}
+/* 登录内容区域 */
+.ui-denglu{
+
+}
+.ui-denglu h4{
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+    margin: 10px auto;
+}
+.ui-denglu label{
+    margin-right: 5px;
+    color: #888;
+    display: inline-block;
+    width: 60px;
+    text-align: right;
+}
+.ui-denglu input{
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 10px 5px;
+    width: 250px;
+}
+.ui-denglu .ui-xiangmu{
+    margin: 20px auto;
+}
+.ui-denglu .ui-tijiao{
+    background: #29b078;
+    border: 1px solid #29b078;
+    border-radius: 5px;
+    padding: 10px 5px;
+    width: 250px;
+    color: #fff;
+}
+.ui-denglu .ui-cuowu-xinxi{
+    color: #29b078;
+    text-align: center;
+}
+
+
 @media (max-width:768px) {
 
 }
